--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 #fab {
   position: fixed;
   display: block;
@@ -10,10 +14,10 @@
 .p-1rem {
   padding: 1rem;
 }
-.cardst{
+.cardst {
   background-color: lightgray;
 }
-.imgst{
+.imgst {
   height: auto;
   width: 75px;
 }
